@@ -31,6 +31,7 @@ $SQM_INTERNAL_VERSION = array(1,4,11);
  * For that reason, bring in global.php AFTER we define the version strings.
  */
 require_once(SM_PATH . 'functions/global.php');
+include_once(SM_PATH . 'plugins/compatibility/functions.php');
 
 /**
  * Wraps text at $wrap characters
@@ -299,11 +300,15 @@ function get_location () {
     /*
      * If you have 'SSLOptions +StdEnvVars' in your apache config
      *     OR if you have HTTPS=on in your HTTP_SERVER_VARS
+     *     OR if you have HTTP_X_FORWARDED_PROTO=https in your HTTP_SERVER_VARS
      *     OR if you are on port 443
      */
     $getEnvVar = getenv('HTTPS');
+    if (!sqgetGlobalVar('HTTP_X_FORWARDED_PROTO', $forwarded_proto, SQ_SERVER))
+        $forwarded_proto = '';
     if ((isset($getEnvVar) && strcasecmp($getEnvVar, 'on') === 0) ||
         (sqgetGlobalVar('HTTPS', $https_on, SQ_SERVER) && strcasecmp($https_on, 'on') === 0) ||
+        (strcasecmp($forwarded_proto, 'https') === 0) ||
         (sqgetGlobalVar('SERVER_PORT', $server_port, SQ_SERVER) &&  $server_port == 443)) {
         $proto = 'https://';
     }
@@ -318,10 +323,11 @@ function get_location () {
     }
 
     $port = '';
-    if (! strstr($host, ':')) {
+    if (strpos($host, ':') === FALSE) {
         if (sqgetGlobalVar('SERVER_PORT', $server_port, SQ_SERVER)) {
             if (($server_port != 80 && $proto == 'http://') ||
-                ($server_port != 443 && $proto == 'https://')) {
+                ($server_port != 443 && $proto == 'https://' &&
+                 $forwarded_proto != 'https')) {
                 $port = sprintf(':%d', $server_port);
             }
         }
